service/k8s/event-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: ticket-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: event-service
          image: ghcr.io/onlydevelop/ticket-master/event-service:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /events/search?q=test
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
