service/k8s/event-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: ticket-master
spec:
  selector:
    app: event-service
  ports:
    - port: 8080
      targetPort: 8080
